--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==22.1.0
 cached-property==1.5.2
 colorama==0.4.5
 coverage==6.4.4
+docutils==0.19
 iniconfig==1.1.1
 numpy==1.23.2
 packaging==21.3
@@ -16,4 +17,4 @@ python-dateutil==2.8.2
 pytz==2022.2.1
 six==1.16.0
 tomli==2.0.1
-
+treys==0.1.8
