--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -4,7 +4,10 @@ build:
   os: ubuntu-20.04
   tools:
     python: 3.10
-    mkdocs: true
+
+mkdocs:
+    configuration: mkdocs.yml
+
 
 python:
   install:
