--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 AWS_BUCKET_NAME=manggytracker
 LOCAL_DATA_DIR=C:/Users/mangg/ManggyTracker/data
+TEST_DATA_DIR=C:/Users/mangg/ManggyTracker/data_test
