--- a/requirements.txt
+++ b/requirements.txt
@@ -1,75 +1,8 @@
-atomicwrites==1.4.1
-attrs==22.1.0
-awscli==1.33.27
-backports.tarfile==1.1.1
+attrs==21.1.0
 boto3==1.34.145
-botocore==1.34.145
-cached-property==1.5.2
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.5
-coverage==6.4.4
-cryptography==42.0.7
-docutils==0.16
-ghp-import==2.1.0
-griffe==0.45.2
-idna==3.7
-importlib_metadata==7.1.0
-iniconfig==1.1.1
-jaraco.classes==3.4.0
-jaraco.context==5.3.0
-jaraco.functools==4.0.1
-jeepney==0.8.0
-Jinja2==3.1.4
-jmespath==1.0.1
-keyring==25.2.0
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-mergedeep==1.3.4
-mkdocs==1.6.0
-mkdocs-autorefs==1.0.1
-mkdocs-get-deps==0.2.0
-mkdocstrings==0.25.1
-mkdocstrings-python==1.10.3
-more-itertools==10.2.0
-nh3==0.2.17
-numpy==1.23.2
-packaging==21.3
-pandas==1.4.3
-pathspec==0.12.1
-pkginfo==1.10.0
-platformdirs==4.2.2
-pluggy==1.0.0
-py==1.11.0
-pyasn1==0.6.0
-pycparser==2.22
-Pygments==2.18.0
-pymdown-extensions==10.8.1
-pyparsing==3.0.9
-pytest==7.1.2
-pytest-cov==3.0.0
-python-dateutil==2.8.2
+pandas==2.2.2
 python-dotenv==1.0.1
-pytz==2022.2.1
-PyYAML==6.0.1
-pyyaml_env_tag==0.1
-readme_renderer==43.0
-requests==2.31.0
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==13.7.1
-rsa==4.7.2
-s3transfer==0.10.2
-SecretStorage==3.3.3
-six==1.16.0
-tomli==2.0.1
 tqdm==4.66.5
-treys==0.1.8
-twine==5.0.0
-urllib3==2.2.1
-watchdog==4.0.1
-zipp==3.18.1
+pip==23.2.1
+wheel>=0.41.2
+setuptools>=68.2.0
