--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-attrs=~22.1
-boto3=~1.34
-pandas=~1.4
-python-dotenv=~1.0
-tqdm=~4.66
+attrs~=22.1
+boto3~=1.34
+pandas~=1.4
+python-dotenv~=1.0
+tqdm~=4.66
 
 
